# image_viewer

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml
deployment/helm/image-viewer-chart/: Chart.yaml  values.yaml
deployment/helm/image-viewer-chart/templates/: deployment.yaml  service.yaml
deployment/revproxy/gen3.nginx.conf/: image-viewer.conf
docs/: CORS.md  helm.md  websequencediagrams.txt
image_viewer/: __init__.py  app.py  indexd_searcher.py  object_signer.py
tests/fixtures/ome-tiff/: README.md  cropped_reactive_core.offsets.json  cropped_reactive_core.ome.tiff
tests/fixtures/vcf/: vcfExample.vcf.gz.tbi  vcfExampleTwo.vcf.gz.tbi
tests/unit/: README.md
tests/unit/app/: .env  conftest.py  test_auth_needed.py  test_auth_needed_env_file.py  test_auth_needed_env_variable.py  test_file_type.py  test_no_auth_needed.py
