[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_viewer"
version = "0.1.0"
description = "A FastAPI project for viewing images"
authors = [
    { name = "Brian Walsh", email = "walsbr@ohsu.edu" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic-settings",
    "python-dotenv",
    "gen3"
]

[project.optional-dependencies]
test = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "flake8"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
